--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Main -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Juan Camilo Vergara - Desarrollador Fullstack">
-    <meta property="og:description" content="Explora el portafolio de Juan Camilo Vergara, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP. Especializado en el diseño de interfaces, desarrollo de aplicaciones intuitivas y soluciones tecnológicas de alto impacto. ¡Descubre mis proyectos y conecta conmigo!">
-    <meta property="og:image" content="images/me.jpeg">
+
+    <!-- Open Graph -->
+    <meta property="og:description" content="Explora el portafolio de Juan Camilo Vergara, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP.">
+    <meta property="og:image" content="https://tu-dominio.com/images/me.jpeg">
+    <meta property="og:url" content="https://tu-dominio.com">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="es_CO">
+    <meta property="og:site_name" content="Juan Camilo Vergara">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Juan Camilo Vergara - Desarrollador Fullstack" />
+    <meta name="twitter:description" content="Explora el portafolio de Juan Camilo Vergara, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP." />
+    <meta name="twitter:image" content="https://tu-dominio.com/images/me.jpeg" />
+
+    <!-- Other -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
