add image in SEO

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Open Graph -->
     <meta property="og:description" content="Explora el portafolio de Juan Camilo Vergara, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP.">
-    <meta property="og:image" content="https://tu-dominio.com/images/me.jpeg">
+    <meta property="og:image" content="https://portfolio-phi-two-60.vercel.app/images/me.jpeg">
     <meta property="og:url" content="https://tu-dominio.com">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_CO">
