--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Juan Camilo Vergara - Desarrollador Fullstack">
+    <meta property="og:title" content="Juan Camilo V.M - Desarrollador Fullstack">
 
     <!-- Open Graph -->
-    <meta property="og:description" content="Explora el portafolio de Juan Camilo Vergara, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP.">
+    <meta property="og:description" content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP.">
     <meta property="og:image" content="https://portfolio-phi-two-60.vercel.app/images/me.jpeg">
     <meta property="og:url" content="https://tu-dominio.com">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_CO">
-    <meta property="og:site_name" content="Juan Camilo Vergara">
+    <meta property="og:site_name" content="Juan Camilo V.M">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Juan Camilo Vergara - Desarrollador Fullstack" />
-    <meta name="twitter:description" content="Explora el portafolio de Juan Camilo Vergara, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP." />
+    <meta name="twitter:title" content="Juan Camilo V.M - Desarrollador Fullstack" />
+    <meta name="twitter:description" content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP." />
     <meta name="twitter:image" content="https://tu-dominio.com/images/me.jpeg" />
 
     <!-- Other -->
