--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     <meta name="twitter:description" content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP." />
     <meta name="twitter:image" content="https://tu-dominio.com/images/me.jpeg" />
 
-    <!-- Other -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <title>Juan Camilo V.M</title>
   </head>
   <body>
