--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Main -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/icons/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Juan Camilo V.M - Desarrollador Fullstack">
 
