--- a/index.html
+++ b/index.html
@@ -1,34 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Main -->
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/icons/logo.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Juan Camilo V.M - Desarrollador Fullstack">
+	<head>
+		<!-- Main -->
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/icons/logo.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			property="og:title"
+			content="Juan Camilo V.M - Desarrollador Fullstack"
+		/>
 
-    <!-- Open Graph -->
-    <meta property="og:description" content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP.">
-    <meta property="og:image" content="https://portfolio-phi-two-60.vercel.app/images/me.jpeg">
-    <meta property="og:url" content="https://tu-dominio.com">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="es_CO">
-    <meta property="og:site_name" content="Juan Camilo V.M">
+		<!-- Open Graph -->
+		<meta
+			property="og:description"
+			content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP."
+		/>
+		<meta
+			property="og:image"
+			content="https://portfolio-phi-two-60.vercel.app/images/me.webp"
+		/>
+		<meta property="og:url" content="https://tu-dominio.com" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="es_CO" />
+		<meta property="og:site_name" content="Juan Camilo V.M" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Juan Camilo V.M - Desarrollador Fullstack" />
-    <meta name="twitter:description" content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP." />
-    <meta name="twitter:image" content="https://tu-dominio.com/images/me.jpeg" />
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Juan Camilo V.M - Desarrollador Fullstack"
+		/>
+		<meta
+			name="twitter:description"
+			content="Explora el portafolio de Juan Camilo, desarrollador web y móvil con experiencia en React, React Native, Node.js y PHP."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://tu-dominio.com/images/me.webp"
+		/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Hubballi&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
 
-    <title>Juan Camilo V.M</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+		<title>Juan Camilo V.M</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
