fix CEO & version 2.0

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="https://portfolio-phi-two-60.vercel.app/images/me.webp"
+			content="https://milo.youworkers.com/images/me.webp"
 		/>
 		<meta property="og:url" content="https://tu-dominio.com" />
 		<meta property="og:type" content="website" />
@@ -36,7 +36,7 @@
 		/>
 		<meta
 			name="twitter:image"
-			content="https://tu-dominio.com/images/me.webp"
+			content="https://milo.youworkers.com/images/me.webp"
 		/>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
