fix min errors in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			property="og:title"
-			content="Juan Camilo V.M - Desarrollador Fullstack"
+			content="Juan Camilo V.M - Desarrollador Frontend"
 		/>
 
 		<!-- Open Graph -->
@@ -19,16 +19,16 @@
 			property="og:image"
 			content="https://milo.youworkers.com/images/me.webp"
 		/>
-		<meta property="og:url" content="https://tu-dominio.com" />
+		<meta property="og:url" content="https://milo.youworkers.com" />
 		<meta property="og:type" content="website" />
 		<meta property="og:locale" content="es_CO" />
-		<meta property="og:site_name" content="Juan Camilo V.M" />
+		<meta property="og:site_name" content="Juan Camilo V.M - Desarrollador Frontend" />
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta
 			name="twitter:title"
-			content="Juan Camilo V.M - Desarrollador Fullstack"
+			content="Juan Camilo V.M - Desarrollador Frontend"
 		/>
 		<meta
 			name="twitter:description"
